--- a/package.json
+++ b/package.json
@@ -39,9 +39,13 @@
     "wait-on": "^7.2.0"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.2",
     "better-sqlite3": "^12.2.0",
     "element-plus": "^2.11.2",
+    "lodash-es": "^4.17.21",
+    "marked": "^16.3.0",
     "sqlite3": "^5.1.7",
+    "uuid": "^13.0.0",
     "vue": "^3.2.45",
     "vue-router": "^4.5.1"
   }
